@@ -1,6 +1,7 @@
 package com.databricks.jdbc.api.impl.volume;
 
 import static com.databricks.jdbc.common.DatabricksJdbcConstants.ALLOWED_VOLUME_INGESTION_PATHS;
+import static com.databricks.jdbc.common.DatabricksJdbcConstants.ENABLE_VOLUME_OPERATIONS;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.isA;
 import static org.mockito.Mockito.when;
@@ -20,8 +21,10 @@ import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.FileInputStream;
 import java.nio.file.Files;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.stream.Stream;
 import org.apache.http.StatusLine;
 import org.apache.http.client.methods.CloseableHttpResponse;
 import org.apache.http.client.methods.HttpDelete;
@@ -31,6 +34,9 @@ import org.apache.http.entity.InputStreamEntity;
 import org.apache.http.entity.StringEntity;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
@@ -54,6 +60,18 @@ public class VolumeOperationResultTest {
           .setIsVolumeOperation(true)
           .setTotalRowCount(1L)
           .setSchema(new ResultSchema().setColumnCount(4L));
+
+  static Stream<Arguments> enableVolumeOperations() {
+    return Stream.of(
+        Arguments.of("true", true),
+        Arguments.of("1", true),
+        Arguments.of("0", false),
+        Arguments.of("True", true),
+        Arguments.of("TrUe", true),
+        Arguments.of("null", false),
+        Arguments.of("false", false),
+        Arguments.of("random_Value", false));
+  }
 
   @Test
   public void testGetResult_Get() throws Exception {
@@ -88,35 +106,34 @@ public class VolumeOperationResultTest {
     }
   }
 
-  @Test
-  public void testGetResult_InputStream_Get() throws Exception {
+  @ParameterizedTest
+  @MethodSource("enableVolumeOperations")
+  public void testGetResult_InputStream_Get(String propertyValue, boolean expected)
+      throws Exception {
     setupCommonInteractions();
+    buildClientInfoProperties(Map.of(ENABLE_VOLUME_OPERATIONS.toLowerCase(), propertyValue));
     when(resultHandler.getObject(0)).thenReturn("GET");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn("__input_stream__");
-    when(mockHttpClient.execute(isA(HttpGet.class))).thenReturn(httpResponse);
-    when(httpResponse.getEntity()).thenReturn(new StringEntity("test"));
-    when(httpResponse.getStatusLine()).thenReturn(mockedStatusLine);
-    when(mockedStatusLine.getStatusCode()).thenReturn(200);
-    when(statement.isAllowedInputStreamForVolumeOperation()).thenReturn(true);
+    if (expected) {
+      when(mockHttpClient.execute(isA(HttpGet.class))).thenReturn(httpResponse);
+      when(httpResponse.getEntity()).thenReturn(new StringEntity("test"));
+      when(httpResponse.getStatusLine()).thenReturn(mockedStatusLine);
+      when(mockedStatusLine.getStatusCode()).thenReturn(200);
+    }
 
+    when(statement.isAllowedInputStreamForVolumeOperation()).thenReturn(true);
     VolumeOperationResult volumeOperationResult =
         new VolumeOperationResult(
             RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
 
     assertTrue(volumeOperationResult.hasNext());
     assertEquals(-1, volumeOperationResult.getCurrentRow());
-    assertTrue(volumeOperationResult.next());
-    assertEquals(0, volumeOperationResult.getCurrentRow());
-    assertEquals("SUCCEEDED", volumeOperationResult.getObject(0));
-    assertFalse(volumeOperationResult.hasNext());
-    assertFalse(volumeOperationResult.next());
-
-    assertNotNull(volumeOperationResult.getVolumeOperationInputStream());
-    assertEquals(
-        "test",
-        new String(
-            volumeOperationResult.getVolumeOperationInputStream().getContent().readAllBytes()));
+    if (expected) {
+      assertSuccessVolumeGetOperations(volumeOperationResult);
+    } else {
+      assertFailedStreamVolumeOperations(volumeOperationResult);
+    }
   }
 
   @Test
@@ -347,15 +364,20 @@ public class VolumeOperationResultTest {
     assertTrue(file.delete());
   }
 
-  @Test
-  public void testGetResult_Put_withInputStream() throws Exception {
+  @ParameterizedTest
+  @MethodSource("enableVolumeOperations")
+  public void testGetResult_Put_withInputStream(String propertyValue, boolean expected)
+      throws Exception {
     setupCommonInteractions();
+    buildClientInfoProperties(Map.of(ENABLE_VOLUME_OPERATIONS.toLowerCase(), propertyValue));
     when(resultHandler.getObject(0)).thenReturn("PUT");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn("__input_stream__");
-    when(mockHttpClient.execute(isA(HttpPut.class))).thenReturn(httpResponse);
-    when(httpResponse.getStatusLine()).thenReturn(mockedStatusLine);
-    when(mockedStatusLine.getStatusCode()).thenReturn(200);
+    if (expected) {
+      when(mockHttpClient.execute(isA(HttpPut.class))).thenReturn(httpResponse);
+      when(httpResponse.getStatusLine()).thenReturn(mockedStatusLine);
+      when(mockedStatusLine.getStatusCode()).thenReturn(200);
+    }
     when(statement.isAllowedInputStreamForVolumeOperation()).thenReturn(true);
     when(statement.getInputStreamForUCVolume())
         .thenReturn(new InputStreamEntity(new ByteArrayInputStream("test-put".getBytes()), 10L));
@@ -363,19 +385,17 @@ public class VolumeOperationResultTest {
     VolumeOperationResult volumeOperationResult =
         new VolumeOperationResult(
             RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
-    assertTrue(volumeOperationResult.next());
-    assertEquals(0, volumeOperationResult.getCurrentRow());
-    assertEquals("SUCCEEDED", volumeOperationResult.getObject(0));
-    assertFalse(volumeOperationResult.hasNext());
-    assertFalse(volumeOperationResult.next());
+    if (expected) {
+      assertSuccessVolumePutOperations(volumeOperationResult);
+    } else {
+      assertFailedStreamVolumeOperations(volumeOperationResult);
+    }
   }
 
   @Test
   public void testGetResult_Put_withNullInputStream() throws Exception {
     setupCommonInteractions();
+    buildClientInfoProperties(Map.of(ENABLE_VOLUME_OPERATIONS.toLowerCase(), "True"));
     when(resultHandler.getObject(0)).thenReturn("PUT");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn("__input_stream__");
@@ -534,6 +554,7 @@ public class VolumeOperationResultTest {
   public void testGetResult_Remove() throws Exception {
     setupCommonInteractions();
     when(resultHandler.getObject(0)).thenReturn("REMOVE");
+    buildClientInfoProperties(Map.of(ENABLE_VOLUME_OPERATIONS.toLowerCase(), "1"));
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn(null);
     when(mockHttpClient.execute(isA(HttpDelete.class))).thenReturn(httpResponse);
@@ -559,8 +580,11 @@ public class VolumeOperationResultTest {
     }
   }
 
-  @Test
-  public void testGetResult_RemoveWithConnectionUrlPath() throws Exception {
+  @ParameterizedTest
+  @MethodSource("enableVolumeOperations")
+  void testGetResult_RemoveWithoutEitherPropertySet(String propertyValue, boolean expected)
+      throws Exception {
+    // Mocks as per your original test
     when(resultHandler.hasNext())
         .thenReturn(true)
         .thenReturn(true)
@@ -568,34 +592,47 @@ public class VolumeOperationResultTest {
         .thenReturn(false);
     when(resultHandler.next()).thenReturn(true).thenReturn(false);
     when(resultHandler.getObject(2)).thenReturn(HEADERS);
-    when(session.getClientInfoProperties()).thenReturn(new HashMap<>());
+    Map<String, String> clientProps = new HashMap<>();
+    clientProps.put(ENABLE_VOLUME_OPERATIONS.toLowerCase(), propertyValue);
+    when(session.getClientInfoProperties()).thenReturn(clientProps);
     when(session.getConnectionContext()).thenReturn(context);
-    when(context.getVolumeOperationAllowedPaths()).thenReturn(ALLOWED_PATHS);
     when(resultHandler.getObject(0)).thenReturn("REMOVE");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn(null);
-    when(mockHttpClient.execute(isA(HttpDelete.class))).thenReturn(httpResponse);
-    when(httpResponse.getStatusLine()).thenReturn(mockedStatusLine);
-    when(mockedStatusLine.getStatusCode()).thenReturn(200);
+    if (expected) {
+      when(mockHttpClient.execute(isA(HttpDelete.class))).thenReturn(httpResponse);
+      when(httpResponse.getStatusLine()).thenReturn(mockedStatusLine);
+      when(mockedStatusLine.getStatusCode()).thenReturn(200);
+      when(context.getVolumeOperationAllowedPaths()).thenReturn(ALLOWED_PATHS);
+    }
 
     when(session.getConnectionContext()).thenReturn(context);
-
     VolumeOperationResult volumeOperationResult =
         new VolumeOperationResult(
             RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
     assertTrue(volumeOperationResult.hasNext());
     assertEquals(-1, volumeOperationResult.getCurrentRow());
-    assertTrue(volumeOperationResult.next());
-    assertEquals(0, volumeOperationResult.getCurrentRow());
-    assertEquals("SUCCEEDED", volumeOperationResult.getObject(0));
-    assertFalse(volumeOperationResult.hasNext());
-    assertFalse(volumeOperationResult.next());
-    try {
-      volumeOperationResult.getObject(2);
-      fail("Should throw DatabricksSQLException");
-    } catch (DatabricksSQLException e) {
-      assertEquals("Invalid column access", e.getMessage());
+    if (expected) {
+      assertTrue(volumeOperationResult.next());
+      assertEquals(0, volumeOperationResult.getCurrentRow());
+      assertEquals("SUCCEEDED", volumeOperationResult.getObject(0));
+      assertFalse(volumeOperationResult.hasNext());
+      assertFalse(volumeOperationResult.next());
+      try {
+        volumeOperationResult.getObject(2);
+        fail("Should throw DatabricksSQLException");
+      } catch (DatabricksSQLException e) {
+        assertEquals("Invalid column access", e.getMessage());
+      }
+    } else {
+      try {
+        volumeOperationResult.next();
+        fail("Should throw DatabricksSQLException");
+      } catch (DatabricksSQLException e) {
+        assertEquals(
+            "Volume operation status : ABORTED, Error message: enableVolumeOperations property or Volume ingestion paths required for remove operation on Volume",
+            e.getMessage());
+      }
     }
   }
 
@@ -603,6 +640,7 @@ public class VolumeOperationResultTest {
   public void testGetResult_RemoveFailed() throws Exception {
     setupCommonInteractions();
     when(resultHandler.getObject(0)).thenReturn("REMOVE");
+    buildClientInfoProperties(Map.of(ENABLE_VOLUME_OPERATIONS.toLowerCase(), "1"));
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn(null);
     when(mockHttpClient.execute(isA(HttpDelete.class))).thenReturn(httpResponse);
@@ -630,6 +668,7 @@ public class VolumeOperationResultTest {
   public void testGetResult_RemoveFailedWithException() throws Exception {
     setupCommonInteractions();
     when(resultHandler.getObject(0)).thenReturn("REMOVE");
+    buildClientInfoProperties(Map.of(ENABLE_VOLUME_OPERATIONS.toLowerCase(), "1"));
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn(null);
     when(mockHttpClient.execute(isA(HttpDelete.class)))
@@ -690,6 +729,43 @@ public class VolumeOperationResultTest {
     }
   }
 
+  private void assertSuccessVolumePutOperations(VolumeOperationResult volumeOperationResult)
+      throws Exception {
+    assertTrue(volumeOperationResult.hasNext());
+    assertEquals(-1, volumeOperationResult.getCurrentRow());
+    assertTrue(volumeOperationResult.next());
+    assertEquals(0, volumeOperationResult.getCurrentRow());
+    assertEquals("SUCCEEDED", volumeOperationResult.getObject(0));
+    assertFalse(volumeOperationResult.hasNext());
+    assertFalse(volumeOperationResult.next());
+  }
+
+  private void assertSuccessVolumeGetOperations(VolumeOperationResult volumeOperationResult)
+      throws Exception {
+    assertTrue(volumeOperationResult.next());
+    assertEquals(0, volumeOperationResult.getCurrentRow());
+    assertEquals("SUCCEEDED", volumeOperationResult.getObject(0));
+    assertFalse(volumeOperationResult.hasNext());
+    assertFalse(volumeOperationResult.next());
+
+    assertNotNull(volumeOperationResult.getVolumeOperationInputStream());
+    assertEquals(
+        "test",
+        new String(
+            volumeOperationResult.getVolumeOperationInputStream().getContent().readAllBytes()));
+  }
+
+  private void assertFailedStreamVolumeOperations(VolumeOperationResult volumeOperationResult) {
+    try {
+      volumeOperationResult.next();
+      fail("Should throw DatabricksSQLException");
+    } catch (DatabricksSQLException e) {
+      assertEquals(
+          "Volume operation status : ABORTED, Error message: enableVolumeOperations property mandatory for Volume operations on stream",
+          e.getMessage());
+    }
+  }
+
   private void setupCommonInteractions() throws Exception {
     when(resultHandler.hasNext())
         .thenReturn(true)
@@ -698,7 +774,16 @@ public class VolumeOperationResultTest {
         .thenReturn(false);
     when(resultHandler.next()).thenReturn(true).thenReturn(false);
     when(resultHandler.getObject(2)).thenReturn(HEADERS);
-    when(session.getClientInfoProperties())
-        .thenReturn(Map.of(ALLOWED_VOLUME_INGESTION_PATHS.toLowerCase(), ALLOWED_PATHS));
+    buildClientInfoProperties(Collections.emptyMap());
+  }
+
+  private void buildClientInfoProperties(Map<String, String> overrides) {
+    Map<String, String> clientInfoProperties = new HashMap<>();
+    clientInfoProperties.put(ALLOWED_VOLUME_INGESTION_PATHS.toLowerCase(), ALLOWED_PATHS);
+
+    if (overrides != null) {
+      clientInfoProperties.putAll(overrides); // add or override test-specific keys
+    }
+    when(session.getClientInfoProperties()).thenReturn(clientInfoProperties);
   }
 }
